# yap

./: .gitignore  README.md  changelog  yap.cabal
Data/YAP/: Algebra.hs  Complex.hs  Matrix.hs  MonoidAdaptors.hs  Polynomial.hs  Quantity.hs  Ratio.hs  Vector.hs
Data/YAP/Algebra/: Internal.hs
Prelude/: YAP.hs
Prelude/YAP/: Internal.hs
